# human-price

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  main.py  noxfile.py  pyproject.toml  test.py
src/python/: utilities.py
static/js/: sliderBubble.js
static/styles/: main.css
template/: index.html
templates/: index.html
tests/: test_get_data.py
