[tool.poetry]
name = "human-price"
version = "0.1.0"
description = ""
authors = ["Emeric <emeric.dynomant@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
Flask = "^1.1.2"
gunicorn = "^20.1.0"
numpy = "^1.20.2"
pandas = "^1.2.3"
requests = "^2.25.1"
html5lib = "^1.1"
bs4 = "^0.0.1"
pytest = "^6.2.2"
nox = "^2020.12.31"
flake8 = "^3.9.0"
mypy = "^0.812"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
